# anyamp

./: .gitignore  CMakeLists.txt
src/: audio_loader.h  main.cpp  player.cpp  player.h
